Make upload link go somewhere.

--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -14,7 +14,8 @@
     </a>
     {{/if}}
 
-    <a class="menu-link {{inRouteCategory 'upload'}} hide-for-phone" href="#">
+    <a class="menu-link {{inRouteCategory 'upload'}} hide-for-phone"
+       href="https://github.com/sandstorm-io/sandstorm/wiki/App-Market-Submission-Instructions">
       <i class="icon-upload"></i>
       <div class="menu-text">Upload an App</div>
     </a>
