Position install buttons more nicely, and fix the fade-box.
The fade-box is now always displayed, because doing so isn't that harmful and helps avoid invoking javascript on resize (ick). The computation didn't seem to work right anyway.

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -36,7 +36,7 @@
               {{else}}
                 {{shortDescription}}
               {{/if}}
-              <div class="fade-box {{#unless textOverflow}}hidden{{/unless}}"></div>
+              <div class="fade-box"></div>
             </div>
 
           </div>
