--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -43,7 +43,7 @@ $app-box-bg: #ffffff;
 $app-box-drp-shdw: #a694b2;
 $app-name-text: #222222;
 $app-author-text: #783189;
-$app-short-description-text: #222222;
+$app-short-description-text: #5b5b5b;
 $app-install-text: #783189;
 $app-installed-text: #b491bc;
 $app-description-text: #222222;
