--- a/app/client/templates/components/getSandstormHost.html
+++ b/app/client/templates/components/getSandstormHost.html
@@ -28,6 +28,11 @@
           </a>
         </div>
         {{/with}}
+        <div class="host-container">
+          <a href="https://sandstorm.io/install#{{appTitle}}" class="sandstorm-button primary" target="_blank">
+            Install New Server
+          </a>
+        </div>
       {{/each}}
 
       <div class="or">
@@ -36,7 +41,7 @@
 
       <div class="sandstorm-input">
         <div class="input">
-          <input type="url" required=true data-field="new-host" placeholder="https://your-server.io" />
+          <input type="url" required=true data-field="new-host" placeholder="https://example.sandcats.io" />
         </div>
         <div class="button" data-action="add-host">
           <i class="fa fa-plus"></i>
