Fix x being pushed to next line.

--- a/app/client/templates/components/getSandstormHost.scss
+++ b/app/client/templates/components/getSandstormHost.scss
@@ -81,7 +81,7 @@
   .hosts {
     display: inline-block;
     text-align: left;
-    width: 25rem;
+    min-width: 25rem;
 
     .sandstorm-button {
       font-weight: normal;
