--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -29,7 +29,7 @@
             <div class="app-name-full-width">{{#if name}}{{name}}{{else}}Untitled{{/if}}</div>
 
             <div class="app-author-full-width">
-              {{#if upstreamAuthor}}Ported by:{{/if}}
+              {{#if upstreamAuthor}}Packaged by:{{/if}}
               {{author.name}}
             </div>
 
