--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -29,7 +29,7 @@
                 <div class="header app-title">{{name}}</div>
 
                 <div class="app-author-full-width">
-                  {{#if upstreamAuthor}}Ported by:{{/if}}
+                  {{#if upstreamAuthor}}Packaged by:{{/if}}
                   <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}">{{author.name}}</a>
 
                   {{#if upstreamAuthor}}
