--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -2,7 +2,7 @@
 
   <div class="topbar-container">
 
-    <a class="logo-box" href="{{getPath 'appMarket'}}">
+    <a class="logo-box" href="https://sandstorm.io">
 
       <i class="icon-logo show-above-phone"></i>
       <i class="icon-logo-image hide-above-phone"></i>
