--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -14,6 +14,12 @@
 
   </div>
 
+  <div class="text-banner">
+    <a href="https://sandstorm.io">Sandstorm.io</a> is an
+    <a href="https://github.com/sandstorm-io/sandstorm">open source</a> platform for personal
+    servers.<br>Install any of apps below with just one click.
+  </div>
+
   <div class="main-section">
 
     <div class="contents">
