Design tweaks to banner and text layout

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -115,6 +115,9 @@ $login-form-font-size: 2rem;
 $login-form-text: $topbar-item-bg;
 $login-form-active-text: $topbar-item-active-bg;
 
+$banner-font-size: 2.9rem;
+$banner-font-color: #594590;
+
 // SIZING
 $button-border-radius: 0.5rem;
 
@@ -233,3 +236,5 @@ $or-gap: 13.3rem;
 $large-button-font-size: 2.39rem;
 $large-button-padding-tb: 2.25rem;
 $large-button-padding-lr: 2.95rem;
+
+$infinity: 10000em;
