--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -4,20 +4,20 @@
 
     <div class="message">
 
-      <div class="text">{{message}}</div>
+      <div class="text">
+          <a href="https://sandstorm.io" target="blank"><strong>Sandstorm.io</strong></a> is an
+          <a href="https://github.com/sandstorm-io/sandstorm" target="blank"><strong>open source</strong></a> platform for
+          servers.
+      </div>
 
     </div>
 
     <div class="close-button">
       <i class="icon-rejected_dark"></i>
     </div>
-
   </div>
-
   <div class="text-banner">
-    <a href="https://sandstorm.io">Sandstorm.io</a> is an
-    <a href="https://github.com/sandstorm-io/sandstorm">open source</a> platform for
-    servers.<br>Install any of the apps below with just one click.
+    Install any of the apps below with just one click.
   </div>
 
   <div class="main-section">
