Sandstorm logo goes home, upload app opens in new tab

--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -15,7 +15,7 @@
     {{/if}}
 
     <a class="menu-link {{inRouteCategory 'upload'}} hide-for-phone"
-       href="https://github.com/sandstorm-io/sandstorm/wiki/App-Market-Submission-Instructions">
+       href="https://docs.sandstorm.io/en/latest/developing/publishing-apps/" target="_blank">
       <i class="icon-upload"></i>
       <div class="menu-text">Upload an App</div>
     </a>
