App item legibility

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -43,10 +43,10 @@ $app-box-bg: #ffffff;
 $app-box-drp-shdw: #a694b2;
 $app-name-text: #222222;
 $app-author-text: #783189;
-$app-short-description-text: #5b5b5b;
+$app-short-description-text: #666666;
 $app-install-text: #783189;
 $app-installed-text: #b491bc;
-$app-description-text: #222222;
+$app-description-text: #666666;
 $app-install-bg: #eee4f4;
 $app-install-icon-col: #c9add0;
 $star-col-dark: #783189;
@@ -159,20 +159,20 @@ $app-image-height: 13.25rem;
 $app-image-large-width: 29.15rem;
 $app-image-large-max-height: 25rem;
 $app-image-large-margin-right: 2.5rem;
-$app-name-font-size: 1.667rem;
-$app-name-large-font-size: 2.9rem;
-$app-name-line-height: 4.15rem;
-$app-short-description-font-size: 1.4rem;
-$app-short-description-large-font-size: 1.667rem;
-$app-short-description-line-height: 2.5rem;
+$app-name-font-size: 1.9rem;
+$app-name-large-font-size: 3.5rem;
+$app-name-line-height: 3.7rem;
+$app-short-description-font-size: 1.5rem;
+$app-short-description-large-font-size: 2.1rem;
+$app-short-description-line-height: 2.1rem;
 $app-author-font-size: 1.4rem;
 $app-author-large-font-size: 1.667rem;
 $app-author-line-height: 2.5rem;
-$app-description-large-font-size: 1.333rem;
+$app-description-large-font-size: 1.5rem;
 $star-font-size: 1.167rem;
 $star-line-height: 2.5rem;
-$app-install-font-size: 1.4rem;
-$app-install-padding-tb: 0.25rem;
+$app-install-font-size: 1.6rem;
+$app-install-padding-tb: 0.35rem;
 $app-install-padding-lr: 1.167rem;
 $app-price-font-size: 1.4rem;
 $app-install-price-line-height: 2.5rem;
