--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -3,10 +3,8 @@
   <div class="topbar-container">
 
     <a class="logo-box" href="/">
-
-      <i class="icon-logo show-above-phone"></i>
-      <i class="icon-logo-image hide-above-phone"></i>
-
+      <i class="icon-logo-image"></i>
+      <span class="show-above-phone">Sandstorm App Market</span>
     </a>
 
     <div class="genre-holder">
