Add nested-span hack to work around display: inherit;

--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -4,7 +4,7 @@
 
     <a class="logo-box" href="/">
       <i class="icon-logo-image"></i>
-      <span class="show-above-phone">Sandstorm App Market</span>
+      <span class="logo-text-formatting"><span class="show-above-phone">Sandstorm App Market</span></span>
     </a>
 
     <div class="genre-holder">
