Avoid clipped text on wide screens

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -141,7 +141,7 @@ $menu-item-padding-tb: 2.333rem;
 $menu-box-shadow: 0.25rem 0.25rem $app-box-drp-shdw;
 
 $app-section-width: 104.167rem;
-$app-section-padding-left: $topbar-logo-margin-left;
+$app-section-padding-left: 32rem; // enough for the text
 $app-section-padding-right: 11.3rem;
 $app-genre-margin-top: 5.417rem;
 $app-genre-margin-bottom: 1.333rem;
