Highlight app name/short description for search quries

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -16,9 +16,9 @@
 
           <div class="text-section">
 
-            <div class="app-name">{{name}}</div>
+            <div class="app-name">{{{name}}}</div>
 
-            <div class="app-short-description">{{shortDescription}}</div>
+            <div class="app-short-description">{{{shortDescription}}}</div>
 
             <div class="app-rating">{{> appRating app=this simple=true}}</div>
 
@@ -53,9 +53,9 @@
 
           </div>
 
-          <div class="app-name">{{name}}</div>
+          <div class="app-name">{{{name}}}</div>
 
-          <div class="app-short-description">{{shortDescription}}</div>
+          <div class="app-short-description">{{{shortDescription}}}</div>
 
           <div class="app-rating">
             {{> appRating app=this simple=true}}
