--- a/app/client/templates/search/search.html
+++ b/app/client/templates/search/search.html
@@ -21,7 +21,7 @@
         <div class="app-table">
 
             {{#each appList}}
-              {{> appItem app=this}}
+              {{> appItem app=this searchQuery=searchQuery}}
             {{/each}}
 
         </div>
