Adding some hover colours

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -47,7 +47,8 @@ $app-short-description-text: #666666;
 $app-install-text: #783189;
 $app-installed-text: #b491bc;
 $app-description-text: #666666;
-$app-install-bg: #eee4f4;
+$app-install-bg: #eddff5;
+$app-install-bg-hover: #f3e9f9;
 $app-install-icon-col: #c9add0;
 $star-col-dark: #783189;
 $star-col-light: #c9add0; // THIS IS CLEARLY WRONG (GIVEN AS #783189)
