--- a/app/client/templates/components/app-rating.scss
+++ b/app/client/templates/components/app-rating.scss
@@ -37,6 +37,10 @@
 
       &.table {
         display: block;
+        
+        &:hover {
+          color: #924da7;
+        }
         > i {
           display: inline-block;
           width: 12%
