--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -361,6 +361,11 @@ $app-container-padding-rl: 4.6rem;
     &.install {
       color: #ffffff;
       background-color: #783189;
+      
+      &:hover {
+        background-color: #9247a9;
+      }
+      
       i {
         color: #c18ace;
       }
