Styled upstream author text to not look like a link

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -35,7 +35,7 @@
 
             {{#if upstreamAuthor}}
               <div class="upstream-author">
-                Upstream author: <a>{{upstreamAuthor}}</a>
+                Upstream author: {{upstreamAuthor}}
               </div>
             {{/if}}
 
