--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -34,7 +34,7 @@
 
                   {{#if upstreamAuthor}}
                     <div class="upstream-author">
-                      Upstream author: <a>{{upstreamAuthor}}</a>
+                      Upstream author: {{upstreamAuthor}}
                     </div>
                   {{/if}}
                 </div>
