Adjust "Featured" to be "All"

--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -11,6 +11,8 @@
 
       <div class="genres">
 
+        <a href="/" data-action="close-more-menu"><div class="genre-box {{#if active}}active{{/if}}">All</div></a>
+
         {{#each genres}}
 
           <a href="{{getZippedPath 'appMarketGenre' 'genre' name}}" data-action="close-more-menu"><div class="genre-box {{#if active}}active{{/if}}">{{name}}</div></a>
