--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -24,13 +24,13 @@
 
     <div class="contents">
 
-      {{!-- TEMPORARY: Just show "featured apps" on front page until we have enough apps to make
-            genres make sense. --}}
+      {{!-- TEMPORARY: Show all apps, implemented the same as "featured apps" on front page until
+            we have enough apps to break the front page down by genre. --}}
 
-      <div class="genre-name large">Featured Apps</div>
+      <div class="genre-name large">All Apps</div>
 
       <div class="genre-other-section">
-        {{> genreTableOther genre="Featured"}}
+        {{> genreTableOther genre="All"}}
       </div>
 
 {{!--
