--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -11,7 +11,7 @@
 
       <div class="genres">
 
-        <a href="/" data-action="close-more-menu"><div class="genre-box {{#if active}}active{{/if}}">All</div></a>
+        <a href="/" class="show-above-phone" data-action="close-more-menu"><div class="genre-box {{#if active}}active{{/if}}">All</div></a>
 
         {{#each genres}}
 
