Use a HREF for app cards on homepage
Close #32

Also:

- Remove the code that handles clicks to a now-nonexistent feature, uninstall-app-modal

- Adjust the app ratings code so that it properly prevents page navigation to the app
  page.

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -1,7 +1,6 @@
 <template name="appItem">
 
-  <div class="app-item-container {{size}} {{appInstalled.cssClass}}" data-link="single-app">
-
+  <div class="app-item-container {{size}} {{appInstalled.cssClass}}"><a href="/app/{{app._id}}">
     <div class="app-item-inner">
 
       {{#if equal size "large"}}
@@ -75,7 +74,7 @@
 
     </div>
 
-  </div>
+  </a></div>
 
 </template>
 
